cmake_minimum_required(VERSION 2.8.11)
IF(NOT DEFINED CMAKE_INSTALL_RPATH_USE_LINK_PATH)
  SET( CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE )
ENDIF(NOT DEFINED CMAKE_INSTALL_RPATH_USE_LINK_PATH)

PROJECT ( ETCFV2 C )

SET( OPTIMIZE_LEVEL -O2 )
SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wno-strict-aliasing" )
SET( CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${OPTIMIZE_LEVEL}" )
SET( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -ggdb" )
SET( CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} ${OPTIMIZE_LEVEL} -ggdb" )

ENABLE_TESTING()

ADD_SUBDIRECTORY( include )
ADD_SUBDIRECTORY( src )

ADD_TEST( etcfv2-test src/test1 )
