
INCLUDE_DIRECTORIES( "${PROJECT_SOURCE_DIR}/include" )

ADD_LIBRARY (etcfv2 SHARED etcfv2.c)


IF(CMAKE_VERSION VERSION_LESS 3.0)
  TARGET_LINK_LIBRARIES (etcfv2 ${CMAKE_THREAD_LIBS_INIT})
ELSE(CMAKE_VERSION VERSION_LESS 3.0)
  TARGET_LINK_LIBRARIES (etcfv2 PUBLIC ${CMAKE_THREAD_LIBS_INIT})
ENDIF(CMAKE_VERSION VERSION_LESS 3.0)

ADD_EXECUTABLE (test1 test1.c)
TARGET_LINK_LIBRARIES (test1 etcfv2)

INSTALL (TARGETS etcfv2
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

